<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.bapplications.maplemobile.utils.BindingUtils"/>
        <variable
            name="viewModel"
            type="com.bapplications.maplemobile.ui.view_models.InventoryViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/window_background">

        <TextView
            android:id="@+id/inventory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/headline_window_background"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:paddingBottom="3dp"
            android:text="@string/popup_inventory_title"
            android:textColor="@color/tc_window"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sub_window_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/inventory_type_buttons_group"
            app:layout_constraintBottom_toTopOf="@id/gold_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/sub_window_background"
            />

        <RadioGroup
            android:id="@+id/inventory_type_buttons_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@={BindingUtils.inventoryTypeToButtonId(viewModel.selectedInventoryType) }"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/sub_window_background"
            app:layout_constraintStart_toStartOf="@id/sub_window_background"
            app:layout_constraintTop_toBottomOf="@id/inventory_title">

            <RadioButton
                android:id="@+id/equip_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/inventory_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:text="@string/popup_inventory_equip_btn"
                android:textColor="@color/tc_window"
                android:textSize="10sp"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/use_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/inventory_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:text="@string/popup_inventory_use_btn"
                android:textColor="@color/tc_window"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/setup_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/inventory_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:text="@string/popup_inventory_setup_btn"
                android:textColor="@color/tc_window"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/etc_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/inventory_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:text="@string/popup_inventory_etc_btn"
                android:textColor="@color/tc_window"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/cash_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/inventory_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:text="@string/popup_inventory_cash_btn"
                android:textColor="@color/tc_window"
                android:textSize="10sp" />

        </RadioGroup>

        <com.bapplications.maplemobile.ui.custom_views.InventoryView
            android:id="@+id/inventory_items_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnWidth="@dimen/icon_size"
            app:layout_constraintTop_toTopOf="@id/sub_window_background"
            app:layout_constraintEnd_toEndOf="@id/sub_window_background"
            app:layout_constraintStart_toStartOf="@id/sub_window_background"
            app:layout_constraintBottom_toBottomOf="@id/sub_window_background" />

        <TextView
            android:id="@+id/loading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/inventory_items_recycler"
            app:layout_constraintEnd_toEndOf="@+id/inventory_items_recycler"
            app:layout_constraintStart_toStartOf="@id/inventory_items_recycler"
            app:layout_constraintBottom_toBottomOf="@id/inventory_items_recycler"
            android:text="@string/loading_screen"
            android:textSize="18sp"
            tools:visibility="gone"
            />

        <ImageView
            android:id="@+id/gold_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/inventory_item_cell_background"
            android:padding="2dp"
            android:src="@drawable/gold_coin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/gold_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gold_text"
            android:textColor="@color/tc_window"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/gold_amount_tv"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/inventory_item_cell_background"
            android:gravity="right"
            android:paddingRight="2dp"
            android:text="1,000,000"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toStartOf="@id/gold_text_tv"
            app:layout_constraintStart_toEndOf="@id/gold_iv"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:text="1,000,000 " />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>